compiler/typ/tests/fixtures/diagnostics/0177_adt_record_pattern_annotation_mismatch_05.ml
type rec_epsilon = { size : int; open_ : bool }
let { size = (epsilon : bool); open_ = other_epsilon } =
  { size = 4; open_ = true }
